Day 4 of project
Accomplished steps:
- Added Stats record to collect all results into one place
- Updated build.gradle.kts for anyone who wants to download the code